<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AddDeviceActivity">

    <TextView
        android:id="@+id/textAppName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="86dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@id/textInformation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageCompass3"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageCompass3"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="86dp"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="@id/textInformation"
        app:layout_constraintEnd_toStartOf="@+id/textAppName2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/compass" />

    <TextView
        android:id="@+id/textDeviceName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/deviceNameText"
        app:layout_constraintBottom_toTopOf="@+id/editDeviceName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInformation" />

    <EditText
        android:id="@+id/editDeviceName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/deviceNameHint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/buttonCreateDevice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDeviceName" />

    <TextView
        android:id="@+id/textInformation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:singleLine="false"
        android:text="@string/informationText"
        app:layout_constraintBottom_toTopOf="@+id/textDeviceName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageCompass3" />

    <Button
        android:id="@+id/buttonCreateDevice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="84dp"
        android:backgroundTint="@color/buttonGreen"
        android:text="@string/buttonCreateDevice"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/buttonReturn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDeviceName" />

    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="84dp"
        android:backgroundTint="@color/buttonGreen"
        android:text="@string/buttonReturn"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonCreateDevice" />

</androidx.constraintlayout.widget.ConstraintLayout>