<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/textAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="39dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/devicesSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageCompass2"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddDevice" />

    <ImageView
        android:id="@+id/imageCompass2"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toStartOf="@+id/textAppName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonAddDevice"
        app:srcCompat="@drawable/compass" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pointsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/mapView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/devicesSpinner" />

    <Button
        android:id="@+id/buttonAddDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonGreen"
        android:text="@string/addDeviceText"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textAppName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonTrace"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/devicesSpinner"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/pointsView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageCompass2" />

    <Button
        android:id="@+id/buttonTrace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#A02C2C"
        android:text="@string/buttonStart"
        app:layout_constraintBottom_toTopOf="@+id/textAppName"
        app:layout_constraintEnd_toStartOf="@+id/buttonAddDevice"
        app:layout_constraintStart_toEndOf="@+id/buttonSignout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonSignout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#6C6CD5"
        android:text="@string/buttonSignout"
        app:layout_constraintBottom_toTopOf="@+id/textAppName"
        app:layout_constraintEnd_toStartOf="@+id/buttonTrace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
